--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -79,5 +79,50 @@ const { title } = Astro.props;
         Courier New,
         monospace;
     }
+    button#hs_show_banner_button {
+      height: 3rem;
+      min-height: 3rem;
+      flex-shrink: 0;
+      cursor: pointer;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      user-select: none;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      border-radius: var(--rounded-btn, 0.5rem);
+      border-color: transparent;
+      border-color: oklch(
+        var(--btn-color, var(--b2)) / var(--tw-border-opacity)
+      );
+      padding-left: 1rem;
+      padding-right: 1rem;
+      text-align: center;
+      font-size: 0.875rem;
+      line-height: 1em;
+      gap: 0.5rem;
+      font-weight: 600;
+      text-decoration-line: none;
+      transition-duration: 0.2s;
+      transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+      border-width: var(--border-btn, 1px);
+      transition-property: color, background-color, border-color, opacity,
+        box-shadow, transform;
+      --tw-text-opacity: 1;
+      color: var(--fallback-bc, oklch(var(--bc) / var(--tw-text-opacity)));
+      --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+      --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+      box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+        var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+      outline-color: var(--fallback-bc, oklch(var(--bc) / 1));
+      background-color: oklch(
+        var(--btn-color, var(--b2)) / var(--tw-bg-opacity)
+      );
+      --tw-bg-opacity: 1;
+      --tw-border-opacity: 1;
+      position: absolute;
+      margin-top: -112px;
+      right: 40px;
+    }
   </style>
 </html>
